# Jupyter-LC_wrapper

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  dev-requirements.txt  diff_manager.txt  install.json  kernel.json  kernel_bash.json  lc_wrapper.py  lc_wrapper_bash.py  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: binder-on-pr.yml  e2e-tests.yml  release.yml
docs/: log-files.md
examples/: Summarizing and Logging.ipynb
lc_CodeCell_execute/: main.js
lc_wrapper/: __init__.py  async_kernelmanager.py  install.py  kernel.py  kernelspec.py  kernelspecapp.py  log.py  utils.py
lc_wrapper/bash/: __init__.py  __main__.py  install.py  kernel.py
lc_wrapper/ipython/: __init__.py  __main__.py  install.py  kernel.py
lc_wrapper/nbextension/: README.md  lc_wrapper.yml  main.js
src/: index.ts
style/: index.css
tests/: test_kernel.py  test_utils.py
ui-tests/e2e-notebook/: requirements.txt  run_notebooks.py
ui-tests/e2e-notebook/notebooks/: 01_Basic_LC_Wrapper_Test_JupyterLab.ipynb  02_Interactive_Input_Test_JupyterLab.ipynb
ui-tests/e2e-notebook/notebooks/scripts/: lc_wrapper.py  playwright.py
