[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "lc_wrapper"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ipykernel>=4.0.0",
    "ipython>=8.0.0",
    "jupyter_client!=7.0.0,!=7.0.1,!=7.0.2,!=7.0.3",
    "python-dateutil",
    "fluent-logger",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
dev = [
    "build",
    "hatch",
    "jupyterlab>=4.0.0,<5",
]

[project.scripts]
jupyter-wrapper-kernelspec = "lc_wrapper.kernelspecapp:LCWrapperKernelSpecApp.launch_instance"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["lc_wrapper/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"lc_wrapper/labextension" = "share/jupyter/labextensions/lc_wrapper"
"install.json" = "share/jupyter/labextensions/lc_wrapper/install.json"
"lc_wrapper/nbextension" = "share/jupyter/nbextensions/lc_wrapper"

[tool.hatch.build.hooks.version]
path = "lc_wrapper/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "lc_wrapper/labextension/static/style.js",
    "lc_wrapper/labextension/package.json",
]
skip-if-exists = ["lc_wrapper/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "lc_wrapper/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]
